<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityChooseOfflineOnline">

    <Button
        android:id="@+id/offline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/offline"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="462dp"
        tools:layout_editor_absoluteY="75dp" />

    <Button
        android:id="@+id/online"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/online"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="305dp"
        tools:layout_editor_absoluteY="75dp" />

    <Button
        android:id="@+id/go_back_to_main_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_back"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="325dp" />
</androidx.constraintlayout.widget.ConstraintLayout>