<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityJoinGame">

    <TextView
        android:id="@+id/min_number_of_players_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min_players"
        tools:layout_editor_absoluteX="86dp"
        tools:layout_editor_absoluteY="21dp" />

    <EditText
        android:id="@+id/min_number_of_players_pole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="48dp" />

    <EditText
        android:id="@+id/max_number_of_players_pole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        tools:layout_editor_absoluteX="319dp"
        tools:layout_editor_absoluteY="150dp" />

    <TextView
        android:id="@+id/max_number_of_players_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max_players"
        tools:layout_editor_absoluteX="86dp"
        tools:layout_editor_absoluteY="116dp" />

    <Button
        android:id="@+id/go_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_back"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="329dp" />

    <ScrollView
        android:layout_width="849dp"
        android:layout_height="132dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="196dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <Button
        android:id="@+id/join_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join_game"
        tools:layout_editor_absoluteX="629dp"
        tools:layout_editor_absoluteY="336dp" />

</androidx.constraintlayout.widget.ConstraintLayout>